# sodiumoxide

./: .gitignore  .travis.yml  Cargo.toml
libsodium-sys/: Cargo.toml  build.rs
src/: lib.rs  newtype_macros.rs  test_utils.rs  utils.rs
src/crypto/: verify.rs
src/crypto/auth/: auth_macros.rs
src/crypto/hash/: hash_macros.rs
src/crypto/scalarmult/: curve25519.rs
src/crypto/secretbox/: xsalsa20poly1305.rs
src/crypto/shorthash/: siphash24.rs
src/crypto/sign/: ed25519.rs
src/crypto/stream/: stream_macros.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
