[package]
authors = ["dnaq"]
build = "build.rs"
description = "FFI binding to libsodium"
documentation = "https://dnaq.github.io/sodiumoxide"
keywords = ["libsodium", "NaCl", "crypto"]
license = "MIT"
links = "sodium"
name = "libsodium-sys"
repository = "https://github.com/dnaq/sodiumoxide.git"
version = "0.0.10"

[build-dependencies]
pkg-config = {version = "0.3", optional = true}
gcc = {version = "0.3", optional = true}

[dependencies]
libc = "0.2"

[lib]
name = "libsodium_sys"
path = "lib.rs"

[features]
default = ["pkg-config"]
build-libsodium = ["gcc"]
