[package]
name = "systest"
version = "0.1.0"
authors = ["Fraser Hutchison <fraser.hutchison@maidsafe.net>"]
build = "build.rs"

[dependencies]
libsodium-sys = { path = "../libsodium-sys" }
libc = "0.2"

[build-dependencies]
ctest = { git = "https://github.com/alexcrichton/ctest" }
unwrap = "1.1"

[features]
default = ["libsodium-sys/get-libsodium"]
